# Asim

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/graph-service/: .env.example  main.py  pyproject.toml
apps/web/: .env.example
apps/web/src/app/api/health/: route.ts
apps/web/src/lib/: auth.ts  graph-client.ts
asim-mvp/: .env.local  index.html  main.py  test_graphiti.py
candidate-app/: .env.local  next.config.ts  package-lock.json  package.json
candidate-app/prisma/: schema.prisma
candidate-app/src/actions/: submit-candidate.ts
candidate-app/src/app/: layout.tsx  page.tsx
candidate-app/src/app/candidates/[id]/: error.tsx  loading.tsx  page.tsx
candidate-app/src/app/intake/: page.tsx
candidate-app/src/components/intake/: Step1BasicInfo.tsx  Step2Transcript.tsx  Step3Survey.tsx  StepIndicator.tsx
candidate-app/src/lib/: graphiti.ts  parse-file.ts  prisma.ts  survey-questions.ts
